# rlevolution

./: .gitignore  LICENSE  README.md  app.py  commit.md  instruksi.md  main.py  pyproject.toml
.streamlit/: config.toml
docs/: generate_dashboard_figures.py  icml2025.sty  main.aux  main.bbl  main.blg  main.out  main.tex  paper.bib
docs/experiments/rl_evolution/: baseline_seed3211.csv  baseline_seed3212.csv  baseline_seed3213.csv  high_exploration_seed3211.csv  high_exploration_seed3212.csv  high_exploration_seed3213.csv  high_hazard_seed3211.csv  high_hazard_seed3212.csv  high_hazard_seed3213.csv  high_mutation_seed3211.csv  high_mutation_seed3212.csv  high_mutation_seed3213.csv  low_hazard_seed3211.csv  low_hazard_seed3212.csv  low_hazard_seed3213.csv  low_mutation_seed3211.csv  low_mutation_seed3212.csv  low_mutation_seed3213.csv  no_exploration_seed3211.csv  no_exploration_seed3212.csv  no_exploration_seed3213.csv  summary_by_run.csv  summary_by_scenario.csv
rlevolution/: cli.py
rlevolution/config/: __init__.py  settings.py
rlevolution/domain/: __init__.py  agent.py  factory.py  fitness.py  snapshot.py  traits.py
rlevolution/environment/: __init__.py  gym_env.py  types.py  world.py
rlevolution/evolution/: __init__.py  genetics.py  selection.py
rlevolution/persistence/: __init__.py  csv_history.py
rlevolution/rl/: __init__.py  q_learning.py
rlevolution/simulation/: __init__.py  engine.py  metrics.py  results.py
rlevolution/ui/: __init__.py  dashboard.py
rlevolution/visualization/: __init__.py  plots.py
