[project]
name = "rlevolution"
version = "0.1.0"
description = "Interactive reinforcement learning simulation for evolution and natural selection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=5.22",
    "streamlit>=1.50",
]

[project.scripts]
rlevolution = "rlevolution.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
